Set up environment for TS and JS to run in this workplace.

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,9 @@ out/
 # Other
 # =========================
 *.sln.docstates
+
+# =========================
+# TS & JS
+# =========================
+node_modules
+dist
